# open-intent

./: .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  CONTRIBUTORS  Dockerfile  Doxyfile.in  LICENSE  README.md  binding.gyp  package.json
bindings/nodejs/: .gitignore  CMakeLists.txt  Dockerfile  README.md  binding.gyp  index.js  package.json
bindings/nodejs/docker/: entrypoint.sh
bindings/nodejs/examples/messenger-chatbot/: app.js  chatbot.js  dictionary.json  launch.sh  messenger.js  package.json  script.oiml
bindings/nodejs/examples/rest-chatbot/: Dockerfile  README.md  app.js  example.js  package.json  rest-client.js  terminal-client.js  userCommands.js
bindings/nodejs/examples/rest-chatbot/custom_res/: script.txt
bindings/nodejs/examples/rest-chatbot/test/: test-rest-chatbot.js
bindings/nodejs/include/: Chatbot.hpp  SerializableChatbot.hpp
bindings/nodejs/include/intentjs/: SerializableChatbot.hpp
bindings/nodejs/lib/: chatbot-client.js  chatbot.js  irc-client.js
bindings/nodejs/lib/api/controllers/: rest-api.js
bindings/nodejs/lib/chatbot-api/: chatbot-factory.js  chatbot-interface.js  chatbot-with-logger.js  chatbot.js  model-builder.js  model-checker.js
bindings/nodejs/lib/chatbot-api/session-manager/: redis-driver.js  standalone-driver.js
bindings/nodejs/lib/chatbot-api/user-defined-actions/: simple-driver.js
bindings/nodejs/lib/middleware/: README.md  doc-publisher.js  index.js  irc.js  kik.js  messenger.js  platforms.js  rest.js  slack.js  swagger.js
bindings/nodejs/lib/middleware/loggers/: elasticsearch.js  logger.js
bindings/nodejs/lib/middleware/public_html/: viz.js
bindings/nodejs/lib/middleware/templates/: intent-story.html
bindings/nodejs/lib/project/: project.js
bindings/nodejs/modules/: CMakeLists.txt
bindings/nodejs/modules/open-intent/: .gitignore  CMakeLists.txt  README.md  index.js  irc-client.js  open-intent.js  package.json  rest-client.js  rest-server.js
bindings/nodejs/modules/open-intent-chatbot/: open-intent-chatbot-factory.js  open-intent-chatbot.js  package.json
bindings/nodejs/modules/open-intent-chatbot/session-manager/: redis-driver.js  standalone-driver.js
bindings/nodejs/modules/open-intent-chatbot/test/: test-open-intent-chatbot-factory.js  (+4 more)
bindings/nodejs/modules/open-intent-rest-chatbot/: app.js  package.json
bindings/nodejs/project-skeletons/chatbot/: Aptfile  app.js  chatbot.js  config.js  heroku_setup  package.json
bindings/nodejs/project-skeletons/rest-chatbot/: .gitignore
bindings/nodejs/src/: SerialiazableChatbot.cpp  SerializableChatbot.cpp  binding.gyp  main.cpp
bindings/nodejs/test/: bad-food-bot-model.js  food-bot-model.js  test-chatbot.js
bindings/nodejs/test-integration/: CMakeLists.txt  Dockerfile  launch.sh
bindings/nodejs/test-integration/chatbot/: Dockerfile  entrypoint.sh  launch.sh
bindings/nodejs/test-integration/elasticsearch-logs/: Dockerfile  launch.sh
bindings/nodejs/test-integration/rest-chatbot/: Dockerfile  entrypoint.sh
bindings/nodejs/test-integration/tutorial/: Dockerfile  entrypoint.sh  launch.sh
bindings/nodejs/test/chatbot-api/: test-chatbot-factory.js  test-chatbot-interface.js  test-chatbot.js  test-model-builder.js  test-restdriver.js  test-simpledriver.js  test-standalone-session-manager.js  test-vmdriver.js  user-commands.js
bindings/nodejs/test/irc-client/: test-irc-client.js
bindings/nodejs/test/middleware/: test-doc-publisher.expected.html  test-doc-publisher.js  test-irc.js  test-platforms.js  test-rest.js
bindings/nodejs/test/project/: test-project.js
bindings/nodejs/test/rest-client/: test-rest-client.js
examples/: CMakeLists.txt
examples/BeerBar/: BeerBar.cpp  BeerBar.hpp  CMakeLists.txt  chatbot.json  main.cpp
examples/BeerBar/test/: BeerBarTest.cpp  CMakeLists.txt
examples/Domotic/: CMakeLists.txt  Domotic.cpp  Domotic.hpp  intent.json  main.cpp
examples/Domotic/test/: CMakeLists.txt  DomoticTest.cpp
examples/IntentViz/: CMakeLists.txt  main.cpp
examples/QueriesBar/: CMakeLists.txt  chatbot.json  main.cpp
src/: CMakeLists.txt
src/bindings/nodejs/: SerialiazableChatbot.cpp  main.cpp
src/chatbot/: Chatbot.cpp  ChatbotFactory.cpp  SingleSessionChatbot.cpp
src/intent_service/: DictionaryModel.cpp  EntitiesMatcher.cpp  IntentEncoder.cpp  IntentMatcher.cpp  IntentModel.cpp  IntentService.cpp  SentenceTokenizer.cpp  Term.cpp  TermIndex.cpp
src/intent_story_service/: IntentStoryModelSerializer.cpp  IntentStoryService.cpp
src/interpreter/: EdgeParser.cpp  Interpreter.cpp  LineTagger.cpp  ReplyTemplateInterpreter.cpp  ScenarioIndexer.cpp  ScenarioTrimmer.cpp  SentenceToIntentTranslator.cpp
src/utils/: Deserializer.cpp  Levenshtein.cpp  Logger.cpp  RegexMatcher.cpp  SingleCharacterDelimiterTokenizer.cpp  Tokenizer.cpp  TrigramHelper.cpp
test/: CMakeLists.txt  ChatbotFactoryTest.cpp  ChatbotTest.cpp  DeserializerTest.cpp  EntitiesMatcherTest.cpp  GraphTest.cpp  IntentMatcherTest.cpp  IntentServiceTest.cpp  IntentStoryModelSerializer.cpp  IntentStoryServiceTest.cpp  InterpreterTest.cpp  MultiSessionChatbotTest.cpp  SingleSessionChatbotTest.cpp  TokenizerTest.cpp  TrigramUtilsTest.cpp
test/launcher/: ResourceManager.cpp  ResourceManager.hpp  TestContext.cpp  TestContext.hpp  main.cpp
test/mock/: ChatbotMock.hpp
test/res/: chatbot_model.json  chatbot_model_without_intent_story.json  intent_dictionary_deserialization_invalid_test.json  intent_dictionary_deserialization_test.json  interpreter_model.txt  interpreter_model_w_errors.txt  order_beverage_intent.json  queries_model.json  template_replies.json
test/same_successive_intents/: SameSuccessiveIntentsTest.cpp
test/same_successive_intents/res/: dictionary.json  script.txt
test/tests/: CMakeLists.txt  ChatbotFactoryTest.cpp  ChatbotTest.cpp  DeserializerTest.cpp  IntentMatcherTest.cpp  IntentServiceTest.cpp  IntentStoryModelSerializer.cpp  IntentStoryServiceTest.cpp  InterpreterTest.cpp  MultiSessionChatbotTest.cpp  SingleCharacterDelimiterTokenizerTest.cpp  SingleSessionChatbotTest.cpp  TermIndexTest.cpp  TokenizerTest.cpp
(+173 files in other folders)
