cmake_minimum_required(VERSION 3.2)

SET(TARGET beerbar)

ADD_DEFINITIONS(-DRESSOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/json/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/spdlog/include)

ADD_EXECUTABLE(${TARGET} main.cpp BeerBar.cpp)
TARGET_LINK_LIBRARIES(${TARGET} intent-static ${Boost_LIBRARIES})

ADD_SUBDIRECTORY(test)
