cmake_minimum_required(VERSION 3.2)

SET(TARGET beerbar-test)

SET(RES_FILES chatbot.json)

COPY_RES_FILES(RES_FILES ${RES_FILES} SRC_DIR ../ DEST_DIR ${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/json/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

ADD_EXECUTABLE(${TARGET} ../BeerBar.cpp BeerBarTest.cpp)
TARGET_LINK_LIBRARIES(${TARGET} gtest gmock gmock_main intent-static)
